test/spec_vectors/f32_cmp/fail/module_3.wat
(module (func (result f32) (f32.gt (i64.const 0) (f64.const 0))))